--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "files": "^2.2.1",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0"
   }
 }
