--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "files": "^2.2.1",
     "moment": "^2.29.4",
     "morgan": "^1.10.0"
