--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-validator": "^6.14.2",
     "files": "^2.2.1",
     "moment": "^2.29.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.5"
   }
 }
